css updated for mobile responive

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -2,9 +2,10 @@
   position: fixed;
   top: 0;
   width: 100%;
-  padding: 20px;
+  padding: 20px 20px 20px 10px;
   z-index: 1;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   transition: all 0.45s ease-in;
   box-sizing: border-box;
