--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -2,10 +2,11 @@
   color: white;
   object-fit: contain;
   height: 448px;
+  position: relative;
 }
 
 .banner__contents {
-  margin-left: 30px;
+  padding: 140px 0px 0 10px;
   padding-top: 140px;
   height: 190px;
 }
@@ -47,6 +48,9 @@
 }
 
 .banner__fadeBottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   height: 7.4rem;
   background-image: linear-gradient(
     180deg,
